--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starwars-hooks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://utkarshkororo.github.io/starwars-hooks",
+  "homepage": "https://utkarshchowdhary.github.io/starwars-hooks",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
